@@ -5,6 +5,8 @@ ver 0.22.7 (not yet released)
   - ffmpeg: fix build problem with FFmpeg 3.4
 * storage
   - curl: don't use glibc extension
+* output
+  - wasapi: add algorithm for finding usable audio format
 
 ver 0.22.6 (2021/02/16)
 * fix missing tags on songs in queue
